# arm-stm32

./: .gitignore  Makefile  rust-arm.md  software.cfg
demo/: .gdbinit  Cargo.toml  Makefile  RUN.md
demo/.cargo/: config
demo/examples/: blinky01.rs  crash.rs  rotary-encoder.rs
dotfiles/: 99-openocd.rules  stlink.conf
stm32f100/: .gitignore  Cargo.toml  Makefile  STM32F100xx.svd
stm32f100/src/: lib.rs
valuelinediscovery/: Cargo.toml  Makefile  memory.x
valuelinediscovery/doc/: inputs.md  lcd.md  pins.md  serial.md  wfi.md
valuelinediscovery/examples/: blinky.rs  button_and_lcd.rs  concurrency.rs  count_button_presses.rs  hello.rs  liquid_crystal.rs  loopback.rs  parse.rs  rotary_and_lcd.rs  roulette.rs
valuelinediscovery/src/: button.rs  frequency.rs  lcd.rs  led.rs  lib.rs  rotary_encoder.rs  serial.rs  timer.rs
