[package]
authors = ["iasdf"]
license = "MIT OR Apache-2.0"
name = "valuelinediscovery"
version = "0.1.0"

[dependencies]
cortex-m = "0.2.6"
cortex-m-rt = "0.2.0"
cortex-m-rtfm = "0.1.0"
heapless = "0.1.0"
stm32f100 = { path = "../stm32f100" }
cast = { version = "*", default-features = false }
numtoa = "0.0.7"

[profile.release]
lto = true
